tests/ui/loop-match/non-const-continue.stderr
error: the value of this `#[const_continue]` is not a constant
  --> $DIR/non-const-continue.rs:14:32
   |
LL |                     break 'blk state;
   |                                ^^^^^ this value is not a constant
   |
   = note: the value must be a literal or a monomorphic const

error: aborting due to 1 previous error

